EL-2455 - Fixing whitespace issue

--- a/src/components/checkbox/checkbox.component.less
+++ b/src/components/checkbox/checkbox.component.less
@@ -4,6 +4,7 @@
     display: inline-block;
     margin-bottom: 5px;
     white-space: nowrap;
+    line-height: 0;
 }
 
 .ux-checkbox {
